Solved bugs
