# tesodev/TicketService/src/internal/routes/routes.go
@@ -11,7 +11,7 @@ func GetRouter(echo *echo.Echo, handler *handler.Handler) {
 
 	echo.POST("/ticket", handler.CreateTicket)
 	echo.POST("/ticket/:ticketId/answer", handler.CreateAnswer)
-	echo.PUT("/ticket/:answerId/answer", handler.UpdateAnswer)
+	echo.PUT("/ticket/answer/:answerId", handler.UpdateAnswer)
 	echo.GET("/ticket/:ticketId", handler.GetTicket)
 	echo.DELETE("/ticket/:ticketId", handler.DeleteTicket)
 	echo.GET("/ticket", handler.GetTickets)
